Fix: 공고 편집 컴포넌트 z-index 변경

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,7 +11,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 100vw;
   padding: 6rem calc(50vw - 48.2rem);
   background: $red-100;
 }
@@ -19,14 +18,12 @@
 .mainWrapper {
   display: flex;
   flex-direction: column;
-  width: 100vw;
   padding: 6rem calc(50vw - 48.2rem);
 }
 
 .layout {
   display: flex;
   flex-direction: column;
-  width: 100vw;
   height: 100vh;
   min-height: 100vh;
 }
