--- a/src/app/shop/page.module.scss
+++ b/src/app/shop/page.module.scss
@@ -4,7 +4,6 @@
 .layout {
   display: flex;
   flex-direction: column;
-  width: 100vw;
   height: 100vh;
   min-height: 100vh;
 }
