--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -114,7 +114,7 @@
 }
 
 /* mobile */
-@include media(mobile) {
+@media (width <= 780px) {
   .contentWrapper {
     grid-template:
       'logo buttonWrapper'
