--- a/src/components/ownerAddNotice/OwnerAddNotice.module.scss
+++ b/src/components/ownerAddNotice/OwnerAddNotice.module.scss
@@ -6,6 +6,8 @@
   height: 100%;
   padding: 6rem 0;
   background-color: $gray-100;
+  position: relative;
+  z-index: 10000;
 }
 
 .contentWrapper {
